--- a/02-jQueryIntroduction/07-writing_our_first_jquery_script/challenge_solution/table.html
+++ b/02-jQueryIntroduction/07-writing_our_first_jquery_script/challenge_solution/table.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <title>Table</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
+  <script type="text/javascript" src="js/my_script.js"></script>
 
   <style>
+
+    .underline {text-decoration: underline;
+    }
+    .border{
+      border: solid 2px #ccc;
+    }
     td, th {
       width: 5rem;
       height: 2rem;
